--- a/templates/email_results.html
+++ b/templates/email_results.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 
-    <h1>Fetched Emails Classification</h1>
+    <h1>Inbox Preview</h1>
 
     {% if results %}
         <table>
@@ -126,7 +126,7 @@
     <a href="/" class="back-link">⬅ Back to Home</a>
 
     <div class="footer">
-        Powered by Hybrid Spam Detector Team
+        Powered by The SpamSafe Team
     </div>
 
 </body>
